# boteditor

./: .gitignore  CMakeLists.txt  run.sh
src/: TextSourceDataModel.cpp  TextSourceDataModel.h  TextSourceDataModel.hpp  main.cpp
src/Dialog/: DialogDataModel.cpp  DialogDataModel.h  DialogDataModel.hpp  DialogLogicEditor.cpp  DialogLogicEditor.h  DialogLogicEditor.hpp  DialogLogicField.cpp.unused  DialogLogicField.h  DialogLogicField.h.unused  DialogLogicInput.cpp  DialogLogicInput.h  DialogLogicOutput.cpp  DialogLogicOutput.h  DialogOptionsWindow.cpp  DialogOptionsWindow.hpp  DialogVariantsWindow.cpp  DialogVariantsWindow.h  DialogVariantsWindow.hpp
src/OperationDataModel/: ModuloModel.cpp
src/StructModel/: StructModelPlayer.cpp  StructModelPlayer.h  StructModelPlayerField.cpp  StructModelPlayerField.h
src/windows/: BotMainWindow.cpp  BotMainWindow.h
translates/: boteditor.pro  boteditor_ru.ts
